--- a/.woodpecker/helpers.yml
+++ b/.woodpecker/helpers.yml
@@ -38,8 +38,7 @@ steps:
 
   - name: generate-rustdocs
     when:
-      - event: push
-        branch: master
+      - evaluate: 'CI_PIPELINE_EVENT == "push" && CI_COMMIT_BRANCH == "master" && CI_REPO_URL == "https://codeberg.org/ark-bitcoin/bark"'
     failure: ignore
     image: registry.2nd.dev/build:20
     volumes:
